@@ -7,32 +7,32 @@
 #endif
 #if defined (DUMP)
 static const char sccsid[] USED =
-	"@(#)/usr/ucb/otfdump.sl	7.58 (gritter) 8/10/06";
+	"@(#)/usr/ucb/otfdump.sl	7.59 (gritter) 8/11/06";
 #elif defined (DPOST)
-static const char sccsid[] USED = "@(#)dpost.sl  7.58 (gritter) 8/10/06";
-const char creator[] = "Heirloom Documentation Tools - dpost 7.58 (gritter) 8/10/06";
+static const char sccsid[] USED = "@(#)dpost.sl  7.59 (gritter) 8/11/06";
+const char creator[] = "Heirloom Documentation Tools - dpost 7.59 (gritter) 8/11/06";
 #elif defined (NROFF)
-static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	7.58 (gritter) 8/10/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	7.59 (gritter) 8/11/06";
 #else	/* !DUMP, !NROFF */
-static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	7.58 (gritter) 8/10/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	7.59 (gritter) 8/11/06";
 #endif	/* !DUMP, !NROFF */
-const char revision[] = "7.58";
+const char revision[] = "7.59";
 /* SLIST */
 /*
-ext.h: * Sccsid @(#)ext.h	1.73 (gritter) 8/10/06
+ext.h: * Sccsid @(#)ext.h	1.74 (gritter) 8/11/06
 hytab.c: * Sccsid @(#)hytab.c	1.4 (gritter) 8/16/05
-n1.c: * Sccsid @(#)n1.c	1.106 (gritter) 8/10/06
+n1.c: * Sccsid @(#)n1.c	1.107 (gritter) 8/11/06
 n2.c: * Sccsid @(#)n2.c	1.28 (gritter) 8/9/06
-n3.c: * Sccsid @(#)n3.c	1.133 (gritter) 8/10/06
+n3.c: * Sccsid @(#)n3.c	1.134 (gritter) 8/11/06
 n4.c: * Sccsid @(#)n4.c	1.57 (gritter) 8/10/06
 n5.c: * Sccsid @(#)n5.c	1.78 (gritter) 8/10/06
 n7.c: * Sccsid @(#)n7.c	1.90 (gritter) 8/10/06
 n8.c: * Sccsid @(#)n8.c	1.33 (gritter) 8/6/06
-n9.c: * Sccsid @(#)n9.c	1.59 (gritter) 8/9/06
+n9.c: * Sccsid @(#)n9.c	1.60 (gritter) 8/10/06
 ni.c: * Sccsid @(#)ni.c	1.36 (gritter) 8/9/06
 nii.c: * Sccsid @(#)nii.c	1.41 (gritter) 8/6/06
 suftab.c: * Sccsid @(#)suftab.c	1.4 (gritter) 8/16/05
-tdef.h: * Sccsid @(#)tdef.h	1.118 (gritter) 8/10/06
+tdef.h: * Sccsid @(#)tdef.h	1.119 (gritter) 8/10/06
 nroff.d/n10.c: * Sccsid @(#)n10.c	1.29 (gritter) 8/7/06
 nroff.d/n6.c: * Sccsid @(#)n6.c	1.45 (gritter) 8/9/06
 nroff.d/pt.h: *	Sccsid @(#)pt.h	1.40 (gritter) 7/29/06
@@ -45,8 +45,8 @@ troff.d/makedev.c: * Sccsid @(#)makedev.c	1.13 (gritter) 4/30/06
 troff.d/otf.c: * Sccsid @(#)otf.c	1.57 (gritter) 8/8/06
 troff.d/otfdump.c: * Sccsid @(#)otfdump.c	1.15 (gritter) 3/16/06
 troff.d/pt.h: * Sccsid @(#)pt.h	1.51 (gritter) 8/6/06
-troff.d/t10.c: * Sccsid @(#)t10.c	1.83 (gritter) 8/6/06
-troff.d/t6.c: * Sccsid @(#)t6.c	1.165 (gritter) 8/10/06
+troff.d/t10.c: * Sccsid @(#)t10.c	1.84 (gritter) 8/10/06
+troff.d/t6.c: * Sccsid @(#)t6.c	1.166 (gritter) 8/11/06
 troff.d/troff.h: * Sccsid @(#)troff.h	1.25 (gritter) 7/11/06
 troff.d/unimap.c: * Sccsid @(#)unimap.c	1.13 (gritter) 2/16/06
 troff.d/unimap.h: * Sccsid @(#)unimap.h	1.2 (gritter) 12/22/05
@@ -59,7 +59,7 @@ troff.d/dpost.d/asciitype.c:	Sccsid @(#)asciitype.c	1.4 (gritter) 4/17/03
 troff.d/dpost.d/asciitype.h:	Sccsid @(#)asciitype.h	1.6 (gritter) 9/9/05	
 troff.d/dpost.d/color.c: * Sccsid @(#)color.c	1.5 (gritter) 11/29/05
 troff.d/dpost.d/comments.h: * Sccsid @(#)comments.h	1.5 (gritter) 8/23/05
-troff.d/dpost.d/dpost.c: * Sccsid @(#)dpost.c	1.151 (gritter) 8/9/06
+troff.d/dpost.d/dpost.c: * Sccsid @(#)dpost.c	1.152 (gritter) 8/11/06
 troff.d/dpost.d/dpost.h: * Sccsid @(#)dpost.h	1.7 (gritter) 4/25/06
 troff.d/dpost.d/draw.c: * Sccsid @(#)draw.c	1.5 (gritter) 11/28/05
 troff.d/dpost.d/ext.h: * Sccsid @(#)ext.h	1.5 (gritter) 1/6/06
